<resources>
    <string name="app_name">知阅</string>
    <string name="main_page">首页</string>
    <string name="theme_news">主题日报</string>

    <string name="load_error">加载失败</string>
    <string name="loading">正在加载</string>
    <string name="refresh">刷新</string>
    <string name="comment">评论</string>
    <string name="confirm">确认</string>

    <string name="replyTo"><Data><![CDATA[<b>//%1$s：</b>]]> </Data>%2$s</string>
    <string name="commentsWithCount">评论(%1$d)</string>

    <string name="settings">设置</string>
    <string name="about">关于</string>
    <string name="share">分享</string>
    <string name="star">收藏</string>
    <string name="watchComments">查看评论</string>

    <string name="common">常规</string>
    <string name="others">其他</string>
    <string name="no_image_mode">无图模式</string>
    <string name="dark_mode">夜间模式</string>
    <string name="skip_splash">跳过启动页</string>
    <string name="only_load_image_wifi">仅在Wifi下加载图片</string>
    <string name="use_webview">使用内置浏览器</string>
    <string name="view_html_in_app">应用内查看链接</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_success">清除成功</string>
    <string name="disclaimer">免责条款</string>
    <string name="disclaimer_content">
        API由 知乎(Zhihu.Inc)提供，获取与共享之行为或有侵犯知乎权益的嫌疑。若被告知需停止共享与使用，本人会及时删除整个项目。\n
        请您暸解相关情况，并遵守知乎协议。
    </string>

    <string name="about_me">关于我</string>
    <string name="repo_url_title">项目地址</string>
    <string name="repo_url">https://github.com/850759383/ZhihuDailyNews</string>
    <string name="mail">E-Mail</string>
    <string name="mail_url">iamyining@yahoo.com</string>
    <string name="license">开源许可</string>
    <string name="software_version">软件版本</string>
    <string name="zhihu_user_home">知乎主页</string>
    <string name="zhihu_url">\u0040Undefeated</string>

    <string name="open_in_browser">在浏览器中打开</string>

    <string name="my_star">我的收藏</string>
    <string name="restore">恢复</string>
    <string name="delete_all">清空</string>
    <string name="cancel">取消</string>
    <string name="delete_all_confirm">是否清空收藏夹</string>
    <string name="notice">注意</string>
</resources>
