<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/common">
        <CheckBoxPreference
            android:checked="false"
            android:key="no_image"
            android:summary="@string/no_image_in_2g_3g_4g"
            android:title="@string/no_image_mode"/>

        <CheckBoxPreference
            android:checked="true"
            android:key="use_webview"
            android:summary="@string/view_html_in_app"
            android:title="@string/use_webview"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/others">
        <Preference
            android:title="@string/clear_cache"
            app:key="clear_cache"/>

        <Preference
            android:key="about"
            android:title="@string/about"/>
    </PreferenceCategory>
</PreferenceScreen>